Food Ordering and Delivery Bot 2.0